hard-gists/1246268/run.log
=== Docker Run Log for 1246268 ===
Started at: Mi 29. Okt 12:02:01 CET 2025

[2025-10-29 12:02:01] START: Running container for 1246268
[2025-10-29 12:02:01] SUCCESS: Container 9f6ca5ccb7da3d736cdcbf6a2a7c31690cda2e8799f8859dce2b79c7473f2adc started for 1246268
=== Container logs for 1246268 ===
  File "/snippet.py", line 23
    print average_image_color(sys.argv[1])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1246268 ===
[2025-10-29 12:02:03] INFO: Container 9f6ca5ccb7da3d736cdcbf6a2a7c31690cda2e8799f8859dce2b79c7473f2adc has stopped
